--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!--PHOTO AREA TAKVIN 0-->
     <div class="row justify-content-evenly section-0 bg-qu-0">
         <div class=".col-xl-6 .col-lg-6 .col-md-6 .col-sm-12 .col-12 flex-parent">
-            <p class="pt-0 FingerPaint-Regular" dir="ltr"><span class="text-qu">OBJECT PRONOUN</span></p>
+            <p class="pt-0 FingerPaint-Regular" dir="ltr"><span class="text-qu">similarity</span></p>
             <p class="pt-0 FingerPaint-Regular" dir="ltr"><span class="text-qu">exercises</span></p>
         </div>    
     </div>        
